[project]
name = "domo-toolkit"
version = "0.1.0"
description = "DOMO Toolkit Web App — Quản lý và phân tích Beast Mode, Card, DataFlow"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "playwright>=1.40.0", # Optional: chỉ cần nếu dùng CDP login
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "apscheduler>=3.10.0",
    "sqlalchemy>=2.0.49",
]

[project.scripts]
domo = "app.main:start"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
